--- a/clase_04/estilos.css
+++ b/clase_04/estilos.css
@@ -1,7 +1,14 @@
 @import url('https://fonts.googleapis.com/css2?family=Mea+Culpa&family=Montserrat:ital,wght@0,100..900;1,100..900&family=Nunito+Sans:ital,opsz,wght@0,6..12,200..1000;1,6..12,200..1000&display=swap');
+
+* {
+    margin: 0;
+    padding: 0;
+}
+
 /* HEADER */
 header {
     background-color: steelblue;
+    height: 300px;
 }
 h1 {
     color: white;
@@ -10,21 +17,42 @@ h1 {
     font-size: 68px;
     letter-spacing: 8px;
     word-spacing: 10px;
+    text-align: center;
+    padding-top: 110px;
 }
 /* NAV */
 nav {
-    border: 2px solid salmon;
+    background-color: teal;
+    padding: 10px;
+}
+
+nav ul {
+    list-style: none;
+}
+
+nav ul li {
+    width: 150px;
+   display: inline-block;
+}
+
+nav ul li:hover {
+    border-bottom: 2px solid wheat;
 }
 
 nav ul li a {
     font-family: "Nunito Sans", sans-serif;
     font-weight: 800;
     text-decoration: none;
+    color: white;
+    display: inline-block;
+    width: 150px;
+    text-align: center;
+    margin-top: 5px;
 }
 
 nav ul li a:hover {
-    color: teal;
-    text-decoration: underline;
+    color: wheat;
+    
 }
 
 section h2 {
@@ -35,13 +63,67 @@ section h2 {
 h1, h2 {
     text-transform: uppercase;
 }
+
+h2 {
+    margin-bottom: 16px;
+}
 span  {
     color: slateblue;
     font-size: 18px;
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
 }
 
+.box {
+    border: 1px solid rgba(112, 111, 111, 0.568);
+    width: 200px;
+    height: 300px;
+    display: inline-block;
+    margin-left: 18px;
+    margin-right: 15px;
+    overflow: hidden;
+    border-radius: 10px;
+    font-family: "Nunito Sans", sans-serif;
 
+    box-shadow: 3px 3px 5px rgba(128, 128, 128, 0.5);
+}
+.box h4 {
+    text-align: center;
+}
+
+.box p {
+    padding: 10px;
+    margin-bottom: 20px;
+}
+.box:hover {
+    box-shadow: 3px 3px 5px rgba(128, 128, 128, 0.7);
+
+}
+
+.box img {
+    width: 100%;
+}
+
+.btn {
+    background-color: slateblue;
+    color: white;
+    border-radius: 5px;
+    font-family: "Nunito Sans", sans-serif;
+    text-decoration: none;
+    padding: 10px;
+    margin-left: 60px;
+}
+
+.btn:hover {
+    background-color: rgb(53, 33, 186);
+
+}
+section {
+    border: 2px solid gray;
+    margin-top: 30px;
+    padding: 16px 30px;
+    background-color: white;
+    border-radius: 5px;
+}
 
 .importante {
     color: tomato;
@@ -64,4 +146,25 @@ p {
     font-weight: 700;
     color: red;
     font-family: "Mea Culpa", cursive;
+}
+
+
+main {
+    padding-top: 16px;
+    padding-left: 50px;
+    padding-right: 50px;
+    padding-bottom: 50px;
+
+    background-color: gray;
+}
+
+footer {
+    background-color: black;
+    padding-top: 16px;
+    padding-bottom: 16px;
+}
+
+footer p {
+    color: white;
+    text-align: center;
 }
