--- a/clase_08/style.css
+++ b/clase_08/style.css
@@ -10,6 +10,10 @@ header {
     justify-content: center;
     align-items: center;
 }
+
+h1 {
+    color: #333333;
+}
 main {
     min-height: 500px;
     display: flex;
@@ -19,9 +23,22 @@ main {
 
 .card {
     border: 0.5px solid #a1a1a1;
-    padding: 10px;
     width: 300px;
     border-radius: 8px;
+    /* overflow: hidden; */
+   
+}
+
+.header {
+    background-color: teal;
+    padding: 16px;
+    border-radius: 8px 8px 0 0;
+}
+
+.body {
+    background-color: rgb(237, 235, 235);
+    color: #333333;
+    padding: 16px;
 }
 footer {
     background-color: #000;
