--- a/clase_08/style.css
+++ b/clase_08/style.css
@@ -9,7 +9,9 @@ header {
     display: flex;
     justify-content: center;
     align-items: center;
+    box-shadow: 1px 5px 10px #333333a3;
 }
+
 
 h1 {
     color: #333333;
@@ -26,6 +28,8 @@ main {
     width: 300px;
     border-radius: 8px;
     /* overflow: hidden; */
+    box-shadow: 1px 5px 10px #333333a3;
+
    
 }
 
@@ -33,8 +37,22 @@ main {
     background-color: teal;
     padding: 16px;
     border-radius: 8px 8px 0 0;
+    display: flex;
+    gap: 10px;
 }
 
+.avatar {
+    width: 70px;
+    border: 3px solid #FFF;
+    border-radius: 50px;
+}
+
+.info {
+    color: white;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+}
 .body {
     background-color: rgb(237, 235, 235);
     color: #333333;
